open-policy-agent/authentication-user-management/shorten-tokens/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sShortenToken
metadata:
  name: shorten-oauth-token
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: ["config.openshift.io"]
        kinds: ["OAuth"]
  parameters:
    maxTokenTime: 29000 # 8 hours
