open-policy-agent/authentication-user-management/shorten-tokens/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sshortentoken
  annotations:
    description: Shorten the default Access Token Lifespan.
spec:
  crd:
    spec:
      names:
        kind: K8sShortenToken
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package K8sShortenToken

        violation[{"msg": msg}] {
          input.review.kind.kind == "OAuth"
          input.review.object.metadata.name == "cluster"
          oauth := input.review.object
          oauth.spec.tokenConfig.accessTokenMaxAgeSeconds > input.parameters.maxTokenTime
          msg := sprintf("The OAuth CR token lifespace was set to %v, while it must be shorter than %v", [oauth.spec.tokenConfig.accessTokenMaxAgeSeconds, input.parameters.maxTokenTime])
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "OAuth"
          input.review.object.metadata.name == "cluster"
          oauth := input.review.object
          not oauth_token(oauth)
          msg := sprintf("The OAuth CR token lifespace was set to 86400, while it must be shorter than %v, refer to 'https://docs.openshift.com/container-platform/4.6/authentication/configuring-internal-oauth.html#oauth-configuring-internal-oauth_configuring-internal-oauth' for more information", [input.parameters.maxTokenTime])
        }

        oauth_token(oauth) = true {
          oauth.spec["tokenConfig"]
          count(oauth.spec.tokenConfig) > 0
        }
